{
  "version": 4,
  "terraform_version": "1.15.6",
  "serial": 680,
  "lineage": "9218c004-313e-4607-4e0a-ffa2201fab6f",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-01757208c891ce655",
            "arn": "arn:aws:ec2:ap-south-1:300177822815:elastic-ip/eipalloc-01757208c891ce655",
            "association_id": "eipassoc-07f79fe57bb7f0ded",
            "domain": "vpc",
            "id": "eipalloc-01757208c891ce655",
            "instance": "i-079ffd84ab0ff0b95",
            "network_border_group": "ap-south-1",
            "network_interface": "eni-0ef583318451ac6f3",
            "private_dns": "ip-10-0-1-229.ap-south-1.compute.internal",
            "private_ip": "10.0.1.229",
            "public_dns": "ec2-13-206-135-205.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.206.135.205",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "dev-3-tier-architecture-bastion-eip"
            },
            "tags_all": {
              "Name": "dev-3-tier-architecture-bastion-eip"
            },
            "vpc": true
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0da16cf8821b32b83",
            "arn": "arn:aws:ec2:ap-south-1:300177822815:elastic-ip/eipalloc-0da16cf8821b32b83",
            "association_id": "eipassoc-0bc690e430274f2e6",
            "domain": "vpc",
            "id": "eipalloc-0da16cf8821b32b83",
            "network_border_group": "ap-south-1",
            "network_interface": "eni-01efda3c5cac8125c",
            "private_dns": "ip-10-0-1-192.ap-south-1.compute.internal",
            "private_ip": "10.0.1.192",
            "public_dns": "ec2-13-207-15-219.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.207.15.219",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "dev-3-tier-architecture-nat-eip-1"
            },
            "tags_all": {
              "Name": "dev-3-tier-architecture-nat-eip-1"
            },
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0cb0a49424ac487f8",
            "arn": "arn:aws:ec2:ap-south-1:300177822815:elastic-ip/eipalloc-0cb0a49424ac487f8",
            "association_id": "eipassoc-0650755490c066ebb",
            "domain": "vpc",
            "id": "eipalloc-0cb0a49424ac487f8",
            "network_border_group": "ap-south-1",
            "network_interface": "eni-08b744548915029a6",
            "private_dns": "ip-10-0-2-73.ap-south-1.compute.internal",
            "private_ip": "10.0.2.73",
            "public_dns": "ec2-35-154-192-23.ap-south-1.compute.amazonaws.com",
            "public_ip": "35.154.192.23",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "dev-3-tier-architecture-nat-eip-2"
            },
            "tags_all": {
              "Name": "dev-3-tier-architecture-nat-eip-2"
            },
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0088add1fc1c6e83a",
            "arn": "arn:aws:ec2:ap-south-1:300177822815:elastic-ip/eipalloc-0088add1fc1c6e83a",
            "association_id": "eipassoc-059a0f7aa59c947b2",
            "domain": "vpc",
            "id": "eipalloc-0088add1fc1c6e83a",
            "network_border_group": "ap-south-1",
            "network_interface": "eni-0f039b8b42d96a15a",
            "private_dns": "ip-10-0-3-211.ap-south-1.compute.internal",
            "private_ip": "10.0.3.211",
            "public_dns": "ec2-13-232-167-75.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.232.167.75",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "dev-3-tier-architecture-nat-eip-3"
            },
            "tags_all": {
              "Name": "dev-3-tier-architecture-nat-eip-3"
            },
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-06cc5ebfb8571a147",
            "arn": "arn:aws:ec2:ap-south-1:300177822815:instance/i-079ffd84ab0ff0b95",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "dev-3-tier-architecture-ec2-instance-profile",
            "id": "i-079ffd84ab0ff0b95",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "EC2TUT",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0ef583318451ac6f3",
            "private_dns": "ip-10-0-1-229.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.229",
            "public_ip": "13.206.135.205",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": true,
                "iops": 3000,
                "kms_key_id": "arn:aws:kms:ap-south-1:300177822815:key/ad14aa06-fc15-45d9-b5bd-704217ebd1b5",
                "throughput": 125,
                "volume_id": "vol-0859b9eb590f0a3da",
                "volume_size": 20,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e257726f7ca79c0a",
            "tags": {
              "Name": "dev-3-tier-architecture-bastion"
            },
            "tags_all": {
              "Name": "dev-3-tier-architecture-bastion"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-023ae702f2e3a53ba"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_iam_instance_profile.ec2_profile",
            "aws_iam_role.ec2_role",
            "aws_security_group.bastion_sg",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_ami.ubuntu"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:300177822815:internet-gateway/igw-0f1bb7360bb92aae6",
            "id": "igw-0f1bb7360bb92aae6",
            "owner_id": "300177822815",
            "tags": {
              "Name": "3-tier-architecture-dev-igw"
            },
            "tags_all": {
              "Name": "3-tier-architecture-dev-igw"
            },
            "vpc_id": "vpc-0d6b34ed6778922ac"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "external_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:300177822815:loadbalancer/app/dev-3-tier-architecture-alb/fc124ea0166deb52",
            "arn_suffix": "app/dev-3-tier-architecture-alb/fc124ea0166deb52",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "dev-3-tier-architecture-alb-1067478076.ap-south-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:ap-south-1:300177822815:loadbalancer/app/dev-3-tier-architecture-alb/fc124ea0166deb52",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "dev-3-tier-architecture-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-06282262042180c01"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0296fe8b093f8de40"
              },
              {
                "subnet_id": "subnet-048ff25cb1ef7e0b0"
              },
              {
                "subnet_id": "subnet-0e257726f7ca79c0a"
              }
            ],
            "subnets": [
              "subnet-0296fe8b093f8de40",
              "subnet-048ff25cb1ef7e0b0",
              "subnet-0e257726f7ca79c0a"
            ],
            "tags": {
              "Name": "dev-3-tier-architecture-alb"
            },
            "tags_all": {
              "Name": "dev-3-tier-architecture-alb"
            },
            "vpc_id": "vpc-0d6b34ed6778922ac",
            "xff_header_processing_mode": "append",
            "zone_id": "ZP97RAFLXTNZK"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.external_alb_sg",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:300177822815:listener/app/dev-3-tier-architecture-alb/fc124ea0166deb52/e2cac786decae542",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:300177822815:targetgroup/dev-3-tier-architecture-tg/af93006ebcbe57bd",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:300177822815:listener/app/dev-3-tier-architecture-alb/fc124ea0166deb52/e2cac786decae542",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-south-1:300177822815:loadbalancer/app/dev-3-tier-architecture-alb/fc124ea0166deb52",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_lb.external_alb",
            "aws_lb_target_group.external_tg",
            "aws_security_group.external_alb_sg",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "external_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:300177822815:targetgroup/dev-3-tier-architecture-tg/af93006ebcbe57bd",
            "arn_suffix": "targetgroup/dev-3-tier-architecture-tg/af93006ebcbe57bd",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200-399",
                "path": "/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:300177822815:targetgroup/dev-3-tier-architecture-tg/af93006ebcbe57bd",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:ap-south-1:300177822815:loadbalancer/app/dev-3-tier-architecture-alb/fc124ea0166deb52"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "dev-3-tier-architecture-tg",
            "port": 5000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": true,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "dev-3-tier-architecture-tg"
            },
            "tags_all": {
              "Name": "dev-3-tier-architecture-tg"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0d6b34ed6778922ac"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0da16cf8821b32b83",
            "association_id": "eipassoc-0bc690e430274f2e6",
            "connectivity_type": "public",
            "id": "nat-00984f7834e410766",
            "network_interface_id": "eni-01efda3c5cac8125c",
            "private_ip": "10.0.1.192",
            "public_ip": "13.207.15.219",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0e257726f7ca79c0a",
            "tags": {
              "Name": "dev-3-tier-architecture-nat-gw-1"
            },
            "tags_all": {
              "Name": "dev-3-tier-architecture-nat-gw-1"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0cb0a49424ac487f8",
            "association_id": "eipassoc-0650755490c066ebb",
            "connectivity_type": "public",
            "id": "nat-0c80b359d9148b2f1",
            "network_interface_id": "eni-08b744548915029a6",
            "private_ip": "10.0.2.73",
            "public_ip": "35.154.192.23",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0296fe8b093f8de40",
            "tags": {
              "Name": "dev-3-tier-architecture-nat-gw-2"
            },
            "tags_all": {
              "Name": "dev-3-tier-architecture-nat-gw-2"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0088add1fc1c6e83a",
            "association_id": "eipassoc-059a0f7aa59c947b2",
            "connectivity_type": "public",
            "id": "nat-04c48a2de1a094932",
            "network_interface_id": "eni-0f039b8b42d96a15a",
            "private_ip": "10.0.3.211",
            "public_ip": "13.232.167.75",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-048ff25cb1ef7e0b0",
            "tags": {
              "Name": "dev-3-tier-architecture-nat-gw-3"
            },
            "tags_all": {
              "Name": "dev-3-tier-architecture-nat-gw-3"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "backend_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "13.0.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-00889aa5ac7dbb2293784157465",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-00984f7834e410766",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-00889aa5ac7dbb229",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_route_table.backend",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "13.0.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-02f119c3cf9f50b4c3784157465",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-00984f7834e410766",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-02f119c3cf9f50b4c",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_route_table.backend",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "13.0.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0a27adbe1fcb321bb3784157465",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-00984f7834e410766",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0a27adbe1fcb321bb",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_route_table.backend",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "frontend_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "12.0.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-047fd635999aaa2d3240108071",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-00984f7834e410766",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-047fd635999aaa2d3",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_route_table.frontend",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "12.0.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-057e2b8028a1f6bef240108071",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-00984f7834e410766",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-057e2b8028a1f6bef",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_route_table.frontend",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "12.0.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-01542db1c5f3646b4240108071",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-00984f7834e410766",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-01542db1c5f3646b4",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_route_table.frontend",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "11.0.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0f1bb7360bb92aae6",
            "id": "r-rtb-0190fabafec9ee0db3849877796",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0190fabafec9ee0db",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:300177822815:route-table/rtb-00889aa5ac7dbb229",
            "id": "rtb-00889aa5ac7dbb229",
            "owner_id": "300177822815",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "13.0.0.0/16",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-00984f7834e410766",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "dev-3-tier-architecture-backend-rt-1",
              "Tier": "backend"
            },
            "tags_all": {
              "Name": "dev-3-tier-architecture-backend-rt-1",
              "Tier": "backend"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d6b34ed6778922ac"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:300177822815:route-table/rtb-02f119c3cf9f50b4c",
            "id": "rtb-02f119c3cf9f50b4c",
            "owner_id": "300177822815",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "13.0.0.0/16",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-00984f7834e410766",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "dev-3-tier-architecture-backend-rt-2",
              "Tier": "backend"
            },
            "tags_all": {
              "Name": "dev-3-tier-architecture-backend-rt-2",
              "Tier": "backend"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d6b34ed6778922ac"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:300177822815:route-table/rtb-0a27adbe1fcb321bb",
            "id": "rtb-0a27adbe1fcb321bb",
            "owner_id": "300177822815",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "13.0.0.0/16",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-00984f7834e410766",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "dev-3-tier-architecture-backend-rt-3",
              "Tier": "backend"
            },
            "tags_all": {
              "Name": "dev-3-tier-architecture-backend-rt-3",
              "Tier": "backend"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d6b34ed6778922ac"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:300177822815:route-table/rtb-0f2f39ad6f354e5ae",
            "id": "rtb-0f2f39ad6f354e5ae",
            "owner_id": "300177822815",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "dev-3-tier-architecture-database-rt",
              "Tier": "database"
            },
            "tags_all": {
              "Name": "dev-3-tier-architecture-database-rt",
              "Tier": "database"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d6b34ed6778922ac"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "frontend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:300177822815:route-table/rtb-047fd635999aaa2d3",
            "id": "rtb-047fd635999aaa2d3",
            "owner_id": "300177822815",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "12.0.0.0/16",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-00984f7834e410766",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "dev-3-tier-architecture-frontend-rt-1",
              "Tier": "frontend"
            },
            "tags_all": {
              "Name": "dev-3-tier-architecture-frontend-rt-1",
              "Tier": "frontend"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d6b34ed6778922ac"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:300177822815:route-table/rtb-057e2b8028a1f6bef",
            "id": "rtb-057e2b8028a1f6bef",
            "owner_id": "300177822815",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "12.0.0.0/16",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-00984f7834e410766",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "dev-3-tier-architecture-frontend-rt-2",
              "Tier": "frontend"
            },
            "tags_all": {
              "Name": "dev-3-tier-architecture-frontend-rt-2",
              "Tier": "frontend"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d6b34ed6778922ac"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:300177822815:route-table/rtb-01542db1c5f3646b4",
            "id": "rtb-01542db1c5f3646b4",
            "owner_id": "300177822815",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "12.0.0.0/16",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-00984f7834e410766",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "dev-3-tier-architecture-frontend-rt-3",
              "Tier": "frontend"
            },
            "tags_all": {
              "Name": "dev-3-tier-architecture-frontend-rt-3",
              "Tier": "frontend"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d6b34ed6778922ac"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:300177822815:route-table/rtb-0190fabafec9ee0db",
            "id": "rtb-0190fabafec9ee0db",
            "owner_id": "300177822815",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": null,
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": null,
                "destination_prefix_list_id": null,
                "egress_only_gateway_id": null,
                "gateway_id": "igw-0f1bb7360bb92aae6",
                "ipv6_cidr_block": null,
                "local_gateway_id": null,
                "nat_gateway_id": null,
                "network_interface_id": null,
                "transit_gateway_id": null,
                "vpc_endpoint_id": null,
                "vpc_peering_connection_id": null
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0d6b34ed6778922ac"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01323fabc308faf73",
            "route_table_id": "rtb-00889aa5ac7dbb229",
            "subnet_id": "subnet-0050a95facfbf09f7"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.backend",
            "aws_subnet.backend",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-008477e7f74ff815f",
            "route_table_id": "rtb-02f119c3cf9f50b4c",
            "subnet_id": "subnet-05cc1117ae11aba4b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.backend",
            "aws_subnet.backend",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0eb5c38114a2d02a0",
            "route_table_id": "rtb-0a27adbe1fcb321bb",
            "subnet_id": "subnet-0ba8a44e1a8e3b376"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.backend",
            "aws_subnet.backend",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01a91e94048b187ed",
            "route_table_id": "rtb-0f2f39ad6f354e5ae",
            "subnet_id": "subnet-0537fc473c8e6ae6f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.database",
            "aws_subnet.database",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e38d601da22eab29",
            "route_table_id": "rtb-0f2f39ad6f354e5ae",
            "subnet_id": "subnet-0292b1f9652a46a96"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.database",
            "aws_subnet.database",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0839a98732ca2fdf9",
            "route_table_id": "rtb-0f2f39ad6f354e5ae",
            "subnet_id": "subnet-009d19d34b27c92a8"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.database",
            "aws_subnet.database",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "frontend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-035123c8983e78992",
            "route_table_id": "rtb-047fd635999aaa2d3",
            "subnet_id": "subnet-0623488b5d4c75ac3"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.frontend",
            "aws_subnet.frontend",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08ab020623c5bb491",
            "route_table_id": "rtb-057e2b8028a1f6bef",
            "subnet_id": "subnet-0ebcf678b71260188"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.frontend",
            "aws_subnet.frontend",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cf36c8965d02bfb8",
            "route_table_id": "rtb-01542db1c5f3646b4",
            "subnet_id": "subnet-05b1a782c73e0ebac"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.frontend",
            "aws_subnet.frontend",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05797bbf0ef47cf8e",
            "route_table_id": "rtb-0190fabafec9ee0db",
            "subnet_id": "subnet-0e257726f7ca79c0a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04fdd970427a2e586",
            "route_table_id": "rtb-0190fabafec9ee0db",
            "subnet_id": "subnet-0296fe8b093f8de40"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03b23ffb3f3325da6",
            "route_table_id": "rtb-0190fabafec9ee0db",
            "subnet_id": "subnet-048ff25cb1ef7e0b0"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "backend_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:300177822815:security-group/sg-0c55fa732ae702f66",
            "description": "Security group for backend instances",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c55fa732ae702f66",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow HTTP from internal ALB",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-02ff71df8d198add3"
                ],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [],
                "description": "Allow SSH from bastion host",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-023ae702f2e3a53ba"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "dev-3-tier-architecture-backend-sg",
            "name_prefix": "",
            "owner_id": "300177822815",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "dev-3-tier-architecture-backend-sg"
            },
            "tags_all": {
              "Name": "dev-3-tier-architecture-backend-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d6b34ed6778922ac"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.bastion_sg",
            "aws_security_group.external_alb_sg",
            "aws_security_group.frontend_sg",
            "aws_security_group.internal_alb_sg",
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:300177822815:security-group/sg-023ae702f2e3a53ba",
            "description": "Security group for bastion host",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-023ae702f2e3a53ba",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow SSH from allowed CIDRs",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "dev-3-tier-architecture-bastion-sg",
            "name_prefix": "",
            "owner_id": "300177822815",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "dev-3-tier-architecture-bastion-sg"
            },
            "tags_all": {
              "Name": "dev-3-tier-architecture-bastion-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d6b34ed6778922ac"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "database_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:300177822815:security-group/sg-08c69267ae0561c67",
            "description": "Security group for database instances",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08c69267ae0561c67",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow PostgreSQL from internal ALB",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-02ff71df8d198add3"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "dev-3-tier-architecture-database-sg",
            "name_prefix": "",
            "owner_id": "300177822815",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "dev-3-tier-architecture-database-sg"
            },
            "tags_all": {
              "Name": "dev-3-tier-architecture-database-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d6b34ed6778922ac"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.bastion_sg",
            "aws_security_group.external_alb_sg",
            "aws_security_group.frontend_sg",
            "aws_security_group.internal_alb_sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "external_alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:300177822815:security-group/sg-06282262042180c01",
            "description": "Security group for ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06282262042180c01",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTP traffic from anywhere",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTPS traffic from anywhere",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "dev-3-tier-architecture-alb-sg",
            "name_prefix": "",
            "owner_id": "300177822815",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "dev-3-tier-architecture-alb-sg"
            },
            "tags_all": {
              "Name": "dev-3-tier-architecture-alb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d6b34ed6778922ac"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "frontend_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:300177822815:security-group/sg-0be317db20a4f9730",
            "description": "Security group for frontend instances",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0be317db20a4f9730",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow HTTP from external ALB",
                "from_port": 5000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-06282262042180c01"
                ],
                "self": false,
                "to_port": 5000
              },
              {
                "cidr_blocks": [],
                "description": "Allow SSH from bastion host",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-023ae702f2e3a53ba"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "dev-3-tier-architecture-frontend-sg",
            "name_prefix": "",
            "owner_id": "300177822815",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "dev-3-tier-architecture-frontend-sg"
            },
            "tags_all": {
              "Name": "dev-3-tier-architecture-frontend-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d6b34ed6778922ac"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.bastion_sg",
            "aws_security_group.external_alb_sg",
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "internal_alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:300177822815:security-group/sg-02ff71df8d198add3",
            "description": "Security group for internal ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02ff71df8d198add3",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow HTTP traffic from frontend instances",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0be317db20a4f9730"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "dev-3-tier-architecture-internal-alb-sg",
            "name_prefix": "",
            "owner_id": "300177822815",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "dev-3-tier-architecture-internal-alb-sg"
            },
            "tags_all": {
              "Name": "dev-3-tier-architecture-internal-alb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d6b34ed6778922ac"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.bastion_sg",
            "aws_security_group.external_alb_sg",
            "aws_security_group.frontend_sg",
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:300177822815:subnet/subnet-0050a95facfbf09f7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.21.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0050a95facfbf09f7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "300177822815",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "3-tier-architecture-dev-backend-subnet"
            },
            "tags_all": {
              "Name": "3-tier-architecture-dev-backend-subnet"
            },
            "vpc_id": "vpc-0d6b34ed6778922ac"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:300177822815:subnet/subnet-05cc1117ae11aba4b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.22.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05cc1117ae11aba4b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "300177822815",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "3-tier-architecture-dev-backend-subnet"
            },
            "tags_all": {
              "Name": "3-tier-architecture-dev-backend-subnet"
            },
            "vpc_id": "vpc-0d6b34ed6778922ac"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:300177822815:subnet/subnet-0ba8a44e1a8e3b376",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1c",
            "availability_zone_id": "aps1-az2",
            "cidr_block": "10.0.23.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ba8a44e1a8e3b376",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "300177822815",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "3-tier-architecture-dev-backend-subnet"
            },
            "tags_all": {
              "Name": "3-tier-architecture-dev-backend-subnet"
            },
            "vpc_id": "vpc-0d6b34ed6778922ac"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:300177822815:subnet/subnet-0537fc473c8e6ae6f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.31.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0537fc473c8e6ae6f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "300177822815",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "3-tier-architecture-dev-database-subnet"
            },
            "tags_all": {
              "Name": "3-tier-architecture-dev-database-subnet"
            },
            "vpc_id": "vpc-0d6b34ed6778922ac"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:300177822815:subnet/subnet-0292b1f9652a46a96",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.32.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0292b1f9652a46a96",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "300177822815",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "3-tier-architecture-dev-database-subnet"
            },
            "tags_all": {
              "Name": "3-tier-architecture-dev-database-subnet"
            },
            "vpc_id": "vpc-0d6b34ed6778922ac"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:300177822815:subnet/subnet-009d19d34b27c92a8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1c",
            "availability_zone_id": "aps1-az2",
            "cidr_block": "10.0.33.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-009d19d34b27c92a8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "300177822815",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "3-tier-architecture-dev-database-subnet"
            },
            "tags_all": {
              "Name": "3-tier-architecture-dev-database-subnet"
            },
            "vpc_id": "vpc-0d6b34ed6778922ac"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "frontend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:300177822815:subnet/subnet-0623488b5d4c75ac3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0623488b5d4c75ac3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "300177822815",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "3-tier-architecture-dev-frontend-subnet"
            },
            "tags_all": {
              "Name": "3-tier-architecture-dev-frontend-subnet"
            },
            "vpc_id": "vpc-0d6b34ed6778922ac"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:300177822815:subnet/subnet-0ebcf678b71260188",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.12.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ebcf678b71260188",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "300177822815",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "3-tier-architecture-dev-frontend-subnet"
            },
            "tags_all": {
              "Name": "3-tier-architecture-dev-frontend-subnet"
            },
            "vpc_id": "vpc-0d6b34ed6778922ac"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:300177822815:subnet/subnet-05b1a782c73e0ebac",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1c",
            "availability_zone_id": "aps1-az2",
            "cidr_block": "10.0.13.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05b1a782c73e0ebac",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "300177822815",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "3-tier-architecture-dev-frontend-subnet"
            },
            "tags_all": {
              "Name": "3-tier-architecture-dev-frontend-subnet"
            },
            "vpc_id": "vpc-0d6b34ed6778922ac"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:300177822815:subnet/subnet-0e257726f7ca79c0a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e257726f7ca79c0a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "300177822815",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "3-tier-architecture-dev-public-subnet"
            },
            "tags_all": {
              "Name": "3-tier-architecture-dev-public-subnet"
            },
            "vpc_id": "vpc-0d6b34ed6778922ac"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:300177822815:subnet/subnet-0296fe8b093f8de40",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0296fe8b093f8de40",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "300177822815",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "3-tier-architecture-dev-public-subnet"
            },
            "tags_all": {
              "Name": "3-tier-architecture-dev-public-subnet"
            },
            "vpc_id": "vpc-0d6b34ed6778922ac"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:300177822815:subnet/subnet-048ff25cb1ef7e0b0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1c",
            "availability_zone_id": "aps1-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-048ff25cb1ef7e0b0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "300177822815",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "3-tier-architecture-dev-public-subnet"
            },
            "tags_all": {
              "Name": "3-tier-architecture-dev-public-subnet"
            },
            "vpc_id": "vpc-0d6b34ed6778922ac"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:300177822815:vpc/vpc-0d6b34ed6778922ac",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0a646788047280364",
            "default_route_table_id": "rtb-069171c46ad17c290",
            "default_security_group_id": "sg-031b2667b49a3f7b8",
            "dhcp_options_id": "dopt-0e59ba0f9c6673c1e",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0d6b34ed6778922ac",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-069171c46ad17c290",
            "owner_id": "300177822815",
            "tags": {
              "Name": "3-tier-architecture-dev-vpc"
            },
            "tags_all": {
              "Name": "3-tier-architecture-dev-vpc"
            }
          },
          "identity_schema_version": 0,
          "create_before_destroy": true
        }
      ]
    }
  ]
}